# src/main/kotlin/com/timearchive/domain/model/MediaUploadRequestStatus.kt
@@ -1,0 +1,7 @@
+package com.timearchive.domain.model
+
+enum class MediaUploadRequestStatus {
+    REQUESTED,
+    COMPLETED,
+    EXPIRED,
+}
